--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@kadk-core/*": ["src/app/core/*"],
+      "@kadk-common/*": ["src/app/common/*"]
+    }
   }
 }
